# osc

./: .gitignore  AngleHistory.h  Base_Oscillation_Analysis.cbp  CMakeLists.txt  discription  gaussFilterResult  main.cpp  options.h  oscillation_basic.h  parse_ptl.h  plotScript  plotScript_test  rmall  test0  test1  test2  tr_rod_model_params.h  wt_flow.h  wt_oscillation.h
data_example/: config
demo/: config_processor.h  demo1.cpp  demo2.cpp  processor_input.h  processor_output.h
demo/io_descriptions/: config_processor.h  description_stream.h  gnuplot_script_helper.h  processor_input.h  processor_io.h  processor_output.h
demo/io_descriptions/config_processor/: config_processor.h  data_to_process.cpp  data_to_process.h
demo/io_descriptions/data_processor/: codes.h  processor_input.h  processor_io.h  processor_output.h
fft/: fftw_impl.h
oscillation/: cut_oscillation_file.h
periods/: periods_base.h
src/: CMakeLists.txt  basic_procedures.h  errcodes.h  error_codes.h  main.cpp  options.cpp  options.h
src/analize_coefficients/: dynamic_coefficient.h  dynamic_coefficients.h  dynamic_coefficients_section.h
src/analize_coefficients/specific/: amplitude.h  pitch_dynamic_momentum.h  pitch_momentum.h  pitch_static_momentum.h
src/analize_coefficients/specific/amplitude/: basic.h  utils.h
src/analize_coefficients/specific/section/: section.h
src/core/: function.h  gsl_wrapper.h  math.h  vector_helpers.h
src/fft/: fftw_impl.h
src/filtration/: butterworth_filter.h  gsl_filters.h
src/flow/: parse_ptl.cpp  parse_ptl.h  ptl_flow.h  wt_flow.cpp  wt_flow.h
src/gnuplot/: data_function.h  data_gnuplot_base.h  data_gnuplot_function.h  gnuplot_1d.h  gnuplot_wrapper.h
src/gnuplot/data/: data.h  data_base.h  data_function.h  data_gnuplot_function.h
src/gnuplot/picture/: png_file.h
src/gnusl_proc/: linnear_approximation.h  nonlinear_approximation.h
src/gnusl_proc/approximation/: linnear.h  nonlinear.h
src/gnusl_wrapper/: helpers.h
src/gnusl_wrapper/approximation/: basic.h  codes.h  linnear.h  nonlinear.h  quadratic_approximation.h
src/gnusl_wrapper/filters/: gauissian.h
src/gnusl_wrapper/interpolation/: interpolation.h
src/io_helpers/: cut_oscillation_file.h  naive.h
src/model/: tr_rod_model_params.h
src/oscillation/: AngleHistory.h  angle_history.cpp  angle_history.h  cut_oscillation_file.h  oscillation_basic.cpp  oscillation_basic.h  oscillation_helpers.h  signal_generator.h  wt_oscillation.cpp  wt_oscillation.h
src/pendulum/: pendulum_analisys  pendulum_analisys.h
src/periods/: periods_base.h
src/signal_generator/: operation_parser.h  operation_performer.h  operation_type_parsers.h  operation_types.h  operations_factory.h  operations_queue.h  signal_generator_base.h  signal_generator_manager.h
src/utils/function_generator/: function_generator.h  function_probe_data.h
src/utils/signal_generator/: operation_performer.h  operations_queue.h  signal_generator_base.h
tests/: CMakeLists.txt  approximation_qadratic_test.cpp  approximation_test.cpp  fftw_wrap_test.cpp  frequency_test.cpp  generate_test_data.cpp  gnuplot_wrapper_test.cpp  integrated_test.cpp  interpolation_test.cpp  main.cpp  numeric_derevative_test.cpp  oscillation_basics_test.cpp  test.cpp  tests.h
